# todomvc-012

./: .plan  Cargo.toml  Dockerfile  README.md
migrations/: 20240001_create_todos.sql
src/: app.rs  lib.rs  main.rs  todo.rs
src/components/: app.rs  footer.rs  mod.rs  todo_input.rs  todo_item.rs  todo_list.rs
style/: main.scss  todomvc-app.css  todomvc-common.css
tests/: integration_tests.rs
