[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "=0.6.13", features = [] }
leptos_axum = { version = "=0.6.13", optional = true }
leptos_meta = { version = "=0.6.13", features = [] }
leptos_router = { version = "=0.6.13", features = [] }
server_fn = { version = "=0.6.13" }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
wasm-bindgen = "=0.2.92"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros", "migrate"], optional = true }
http = "1"

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:sqlx",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "todomvc"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
bin-features = ["ssr"]
lib-features = ["hydrate"]
